Fix styling and spacing errors

--- a/src/components/BuyerView/Store/MenuCard/MenuCard.css
+++ b/src/components/BuyerView/Store/MenuCard/MenuCard.css
@@ -18,7 +18,7 @@
     padding: 0px 5%;
     font-size: 1.2em;
     margin: 3px 0px;
-    width: 100%;
+    width: 80%;
 }
 
 .store-item .item{
@@ -50,6 +50,7 @@
         padding: 0px 0px;
         font-size: 14px;
         grid-template-columns: 40% 30% 30%;
+        width: 100%;
     }
 
     .menucard{
