--- a/src/components/SellerView/Dashboard/Orders/OrderCard/OrderCard.css
+++ b/src/components/SellerView/Dashboard/Orders/OrderCard/OrderCard.css
@@ -7,7 +7,7 @@
 
 .bill-item {
   display: grid;
-  grid-template-columns: 50% 25% 25%;
+  grid-template-columns: 50% 20% 30%;
   align-items: center;
 }
 
