--- a/src/components/SellerView/Dashboard/Orders/Orders.css
+++ b/src/components/SellerView/Dashboard/Orders/Orders.css
@@ -1,8 +1,8 @@
 .orders {
   width: 90%;
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
-  grid-template-rows: repeat(auto-fill, minmax(250px, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+  grid-template-rows: repeat(auto-fill, minmax(300px, 1fr));
   grid-gap: 20px;
 }
 
